--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	    <nav class="top-navigation">
-        <div class="content"></div>
+        <div class="content"><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px"></div>
     </nav>
 </body>
 </html>
