--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head><link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	    <nav class="top-navigation">
-        <div class="content"><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px"></div>
+        <div class="content"><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+
+        <ul class="links">
+    <li>Meet Karma</li>
+    <li>How It works</li>
+    <li>Store</li>
+    <li>Blog</li>
+    <li>Help</li>
+    <li>Log in</li>
+</ul></div>
+
+
     </nav>
 </body>
 </html>
