--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 	    <nav class="top-navigation">
-        <div class="content"><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
-
+        <div class="content">
         <ul class="links">
-    <li>Meet Karma</li>
-    <li>How It works</li>
-    <li>Store</li>
-    <li>Blog</li>
-    <li>Help</li>
-    <li>Log in</li>
-</ul></div>
+    <li><a href="">Meet Karma</a></li>
+    <li><a href="">How It Works</a></li>
+    <li><a href="">Store</a></li>
+    <li><a href="">Blog</a></li>
+    <li><a href="">Help</a></li>
+    <li><a href="">Log in</a></li>
+</ul><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+</div>
 
 
     </nav>
