--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </ul><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
 </div>
 
+<div class="introduction">
+</div>
 
     </nav>
 </body>
