--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head><link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+
 	    <nav class="top-navigation">
         <div class="content">
         <ul class="links">
@@ -17,9 +18,16 @@
     <li><a href="">Log in</a></li>
 </ul><img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
 </div>
+</nav>
 
-<div class="introduction">
+<section class="introduction">
+
+<div class="content">
+<h1>Introducing Karma</h1>
+        <h3>Bring WiFi with you, everywhere you go.</h3>
+        <button class="big-button">Learn More</button>
 </div>
+</section>
 
     </nav>
 </body>
