--- a/index.html
+++ b/index.html
@@ -29,6 +29,32 @@
 </div>
 </section>
 
-    </nav>
+<section class="cases">
+
+<div class="content">
+<h1>Everyone needs a little Karma</h1>
+           <ul class="devices">
+                <li>
+                    <img width="127px" height="127px" src="images/icon-devices.svg" alt="Internet for all devices image">
+                    <div class="caption">
+                        <h3>Internet for all devices</h3>
+                    </div>
+                </li>
+                <li>
+                    <img width="127px" height="127px" src="images/icon-coffee.svg" alt="Boost your productivity image">
+                    <div class="caption">
+                        <h3>Boost your productivity</h3>
+                    </div>
+                </li>
+                <li>
+                    <img width="127px" height="127px" src="images/icon-refill.svg" alt="Pay as You Go image">
+                    <div class="caption">
+                        <h3>Pay as You Go</h3>
+                    </div>
+                </li>
+            </ul>
+            </div>
+</section>
+
 </body>
 </html>
