--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head><link rel="stylesheet" href="css/style.css">
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
+
+	<title>Karma Landing Page</title>
 </head>
 <body>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+<link href="css/font-awesome.min.css" rel="stylesheet">
 
 	    <nav class="top-navigation">
         <div class="content">
@@ -56,5 +60,28 @@
             </div>
 </section>
 
+
+<section class="footer">
+<div class="social">
+            
+            <hr>
+            <h5>Join us on</h5>
+            <ul class="icons">
+                <li class="twitter">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="facebook">
+                    <i class="fa fa-facebook"></i>
+                </li>
+                <li class="instagram">
+                    <i class="fa fa-instagram"></i>
+                </li>
+            </ul>
+            <span class="copy">
+                &copy; Karma Mobility, Inc.
+            </span>
+        </div>
+
+</section>
 </body>
 </html>
