--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/x-icon"  href="favicon_name.ico">
 
-	<title>Karma Landing Page</title>
+	<title>Karma Landing</title>
 </head>
 <body>
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
 <link href="css/font-awesome.min.css" rel="stylesheet">
 
